fix: image not scale properly on mobile view

--- a/css/travel.css
+++ b/css/travel.css
@@ -4,7 +4,7 @@
     justify-content: center;
   }
   
-.gallery img{
+/* .gallery img{
     border-radius: 1vw;
     border: 1vw solid #36a66863;
-  } 
+  }  */
